--- a/mobile/falken-cargo/package.json
+++ b/mobile/falken-cargo/package.json
@@ -27,8 +27,7 @@
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "nodemon": "^3.1.7"
-  },
+    "@babel/core": "^7.20.0"
+    },
   "private": true
 }
