--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "react-native-paper": "^5.12.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
