--- a/mobile/falken-cargo/package.json
+++ b/mobile/falken-cargo/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.2.0",
     "expo-image-picker": "~15.0.7",
-    "@react-native-picker/picker": "2.7.5"
+    "@react-native-picker/picker": "2.7.5",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
